@@ -11,6 +11,7 @@ Changes in 1.2:
 - Remove usage of several deprecated KDE3 networking classes
 - Remove obsolete functions of data check during upload
 - Revamp networking code
+- Remove thread from DHT code
 
 Changes in 1.1.3:
 - Fix crash in webseed code (281605)
